--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <!-- About -->
     <string name="about_details">The defibrillators are tracked one by one and verified by ourselves.</string>
 
+    <!-- Contact -->
+    <string name="contact_title_chooser">Contact us via:</string>
+    <string name="contact_email">android@dae68.fr</string>
+
 </resources>
