--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -22,6 +22,7 @@
 
     <!-- About -->
     <string name="about_details">Les défibrillateurs sont recensés un à un et les informations relatives sont vérifiés manuellement par nos soins.</string>
+    <string name="close">Fermer</string>
 
     <!-- Contact -->
     <string name="contact_title_chooser">Nous contacter via :</string>
