--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <!-- Defib details -->
     <string name="environment_outdoors">Outdoors</string>
     <string name="environment_indoors">Indoors</string>
-    <string name="walking_direction_title">Show directions via:</string>
+    <string name="directions">Show directions</string>
+    <string name="walking_directions_title">Show directions via:</string>
 
     <!-- Errors -->
     <string name="error_not_in_68">It looks like you are not in the Haut-Rhin (France), there isn\'t any defibrillator around there referenced in this application</string>
