Remove showcase view and show contextual helps

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,7 +14,9 @@
     <!-- Defib details -->
     <string name="environment_outdoors">Extérieur</string>
     <string name="environment_indoors">Intérieur</string>
+    <string name="directions">Afficher l\'itinéraire</string>
     <string name="walking_directions_title">Afficher l\'itinéraire via :</string>
+    <string name="tip_directions">Tapez ici pour afficher l\'itinéraire</string>
 
     <!-- Errors -->
     <string name="error_not_in_68">Il semblerait que vous soyez hors du Haut-Rhin, pas de défibrillateur recensé à proximité</string>
