--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="environment_outdoors">Outdoors</string>
     <string name="environment_indoors">Indoors</string>
     <string name="directions">Show directions</string>
+    <string name="tip_directions">Tap here to show the directions</string>
     <string name="walking_directions_title">Show directions via:</string>
 
     <!-- Errors -->
