--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -33,4 +33,13 @@
     <!-- Contact -->
     <string name="contact_title_chooser">Nous contacter via :</string>
     <string name="contact_email">android@dae68.fr</string>
+
+    <!-- Noter appli-->
+    <string name="rate_app">Noter l\'application</string>
+    <string name="rate_app_alert_title">Noter l\'application</string>
+    <string name="rate_app_alert_details">Noter l\'application</string>
+    <string name="rate_app_alert_positive">Noter</string>
+    <string name="rate_app_alert_neutral">Plus tard</string>
+    <string name="rate_app_alert_negative">Jamais</string>
+
 </resources>
