--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -27,8 +27,8 @@
     <string name="ignore">Ignorer</string>
 
     <!-- About -->
-    <string name="about_details">Les défibrillateurs sont recensés un à un et les informations relatives sont vérifiés manuellement par nos soins.</string>
     <string name="close">Fermer</string>
+    <string name="about_details">Les informations que vous trouvez sur cette application sont issues du site officiel du SAMU et des Pompiers du Haut-Rhin www.dae68.fr\nEn cas d’arrêt cardiaque, ne perdez pas de temps à chercher un DAE si vous ne connaissez pas son emplacement.\nLe plus important est de commencer une réanimation et d\'alerter les secours (Tél 112).</string>
 
     <!-- Contact -->
     <string name="contact_title_chooser">Nous contacter via :</string>
