Add skeleton for 3 slides tutorial

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,7 +38,9 @@
     <string name="rate_app">Noter l\'application</string>
 
     <!-- Other tips -->
-    <string name="tip_closest_defib">Trouvez le défibrillateur le plus proche</string>
-    <string name="tip_haut_rhin">Zoomez sur le Haut-Rhin</string>
+    <string name="skip">Passer</string>
+    <string name="tip_closest_defib">Trouvez le DAE le plus proche</string>
+    <string name="tip_haut_rhin">Centrez la carte sur le Haut-Rhin</string>
+    <string name="tip_location">Centrez la carte là où vous êtes</string>
 
 </resources>
