--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,11 @@
     <!-- Noter appli-->
     <string name="rate_app">Rate the app</string>
 
-    <string name="tip_closest_defib">Find the closest defibrillator</string>
-    <string name="tip_haut_rhin">Zoom on the Haut-Rhin</string>
-
+    <!-- Tutorial -->
+    <string name="tuto_title_closest">Tip 1/3: Closest defibrillator</string>
+    <string name="tuto_details_closest">Press the red button to quickly find the closest defibrillator from your current location</string>
+    <string name="tuto_title_68">Tip 2/3: Show Haut-Rhin</string>
+    <string name="tuto_details_68">Press the 68 button to zoom and center the map on the Haut-Rhin</string>
+    <string name="tuto_title_location">Tip 3/3: Current location</string>
+    <string name="tuto_details_location">Press the radar button to show your current location</string>
 </resources>
