--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -24,6 +24,10 @@
 
     <string name="error_alert_title_location_disabled">Services de localisation désactivés</string>
     <string name="error_alert_details_location_disabled">Votre position doit être accessible pour trouver le défibrillateur le plus proche de vous.\nVeuillez activer la fonctionnalité d\'accès aux données de localisation.</string>
+    <string name="error_alert_title_airplane_enabled">Mode Avion activé</string>
+    <string name="error_alert_details_airplane_enabled">Il semblerait que le mode Avion est activé sur votre téléphone, pour le bon fonctionnement de l\'application, assurez-vous que votre téléphone est connecté au réseau.\nVeuillez désactiver le mode Avion dans les paramètres du téléphone.</string>
+    <string name="error_alert_title_connectivity_unavailable">Pas de connexion réseau</string>
+    <string name="error_alert_details_connectivity_unavailable">Veuillez vérifier votre connexion, pour le bon fonctionnement de l\'application, assurez-vous d\'être connecté à un réseau 3G/4G ou Wi-Fi.</string>
     <string name="ignore">Ignorer</string>
 
     <!-- About -->
