Convert nicely meters values in km or keep them in meters for display

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,7 +19,7 @@
     <string name="walking_directions_title">Afficher l\'itinéraire via :</string>
     <string name="tip_directions">Tapez ici pour afficher l\'itinéraire</string>
     <string name="tip_closest">Défibrillateur le plus proche</string>
-    <string name="at_distance">À %1$d mètres</string>
+    <string name="at_distance">À %1$s</string>
 
     <!-- Errors -->
     <string name="error_snackbar_not_in_68">Hors du Haut-Rhin ?\nPas de défibrillateur recensé</string>
