Add version name in the drawer

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">DAE68</string>
     <string name="map">Carte</string>
+    <string name="unknown_version">Version inconnue</string>
 
     <!-- Drawer -->
     <string name="drawer_toggle_description">Menu</string>
