--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="app_name">DAE68</string>
     <string name="map">Carte</string>
@@ -49,7 +49,7 @@
     <string name="rate_app">Noter l\'application</string>
 
     <!-- Tutorial -->
-    <string name="tuto_title_closest">Aide 1/3 : Défibrillateur le plus proche</string>
+    <string name="tuto_title_closest" tools:ignore="TypographyFractions">Aide 1/3 : Défibrillateur le plus proche</string>
     <string name="tuto_details_closest">Pressez le bouton rouge pour trouver rapidement le défibrillateur le plus proche de votre position actuelle</string>
     <string name="tuto_title_68">Aide 2/3: Zoomer sur le Haut-Rhin</string>
     <string name="tuto_details_68">Pressez le bouton 68 pour zoomer et centrer la carte sur le Haut-Rhin</string>
